RESOLVED FIXED64996
Gif animations stop working if system time is changed to a time in past
https://bugs.webkit.org/show_bug.cgi?id=64996
Summary Gif animations stop working if system time is changed to a time in past
Devdatta Deshpande
Reported 2011-07-21 16:58:01 PDT
Steps to reproduce: 1. Launch a web-page with animated gif images. For e.g. http://en.wikipedia.org/wiki/Graphics_Interchange_Format 2. While the animation is on, change the system time to a time in past. Result: Observe that the gif animations stop working. Expected behavior: Animation should work independent of change in system time.
Attachments
Patch (1.35 KB, patch)
2011-07-21 17:03 PDT, Devdatta Deshpande
no flags
Patch (1.38 KB, patch)
2011-07-28 14:51 PDT, Devdatta Deshpande
no flags
Devdatta Deshpande
Comment 1 2011-07-21 17:03:16 PDT
Martin Robinson
Comment 2 2011-07-28 10:18:23 PDT
Comment on attachment 101669 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=101669&action=review > Source/WebCore/ChangeLog:10 > + Test: Load http://en.wikipedia.org/wiki/Graphics_Interchange_Format > + Change system time to a time in past > + Is there a test in manual-tests that uses an animated GIF? If so it might be better to refer to that one.
Devdatta Deshpande
Comment 3 2011-07-28 14:51:40 PDT
James Robinson
Comment 4 2011-07-28 14:55:53 PDT
Comment on attachment 102302 [details] Patch Patch looks great! Thanks for fixing this. Do you need help committing this? Mark the "cq" flag "cq?" to request a commit from the commit bot, if so.
WebKit Review Bot
Comment 5 2011-07-28 17:02:43 PDT
Comment on attachment 102302 [details] Patch Clearing flags on attachment: 102302 Committed r91960: <http://trac.webkit.org/changeset/91960>
WebKit Review Bot
Comment 6 2011-07-28 17:02:47 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.