Fixed gif animation dependency on system time https://bugs.webkit.org/show_bug.cgi?id=64996

Patch by Devdatta Deshpande <pwjd73@motorola.com> on 2011-07-28
Reviewed by James Robinson.

Test: Load WebCore/manual-tests/animated-gif-looping.html
Change system time to a time in past

* platform/graphics/BitmapImage.cpp:
(WebCore::BitmapImage::startAnimation): Bitmap animation is now based
on monotonicallyIncreasingTime instead of currentTime

Canonical link: https://commits.webkit.org/81118@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@91960 268f45cc-cd09-0410-ab3c-d52691b4dbfc